--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ itemadapter==0.2.0; python_version >= "3.6"
 itemloaders==1.0.4; python_version >= "3.6"
 jmespath==0.10.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6"
 js2py==0.71
-spidermon=1.15.0
+spidermon==1.15.0
 jstyleson==0.0.2
 lxml==4.6.3; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 mf2py==1.1.1
@@ -46,6 +46,8 @@ rdflib-jsonld==0.5.0
 rdflib==5.0.0
 regex==2021.4.4; python_version >= "3.5"
 requests==2.15.1
+schematics==2.1.0
+python-decouple==3.4; python_version >= "3.6"
 scrapy==2.5.0; python_version >= "3.6"
 service-identity==21.1.0; python_version >= "3.6"
 six==1.16.0; python_full_version >= "3.5.4" and python_version >= "3.6" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0") and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0")
