--- a/requirements.txt
+++ b/requirements.txt
@@ -45,6 +45,8 @@ queuelib==1.6.1; python_version >= "3.6"
 rdflib-jsonld==0.5.0
 rdflib==5.0.0
 regex==2021.4.4; python_version >= "3.5"
+scrapy-mongodb==0.12.0
+pymongo==3.11.4
 requests==2.15.1
 schematics==2.1.0
 python-decouple==3.4; python_version >= "3.6"
