--- a/requirements.txt
+++ b/requirements.txt
@@ -1,65 +1,77 @@
-attrs==21.2.0; python_full_version >= "3.5.4" and python_version >= "3.6"
-automat==20.2.0; python_full_version >= "3.5.4" and python_version >= "3.6"
-beautifulsoup4==4.9.3
-cffi==1.14.5; python_version >= "3.6"
-constantly==15.1.0; python_full_version >= "3.5.4" and python_version >= "3.6"
-cryptography==3.4.7; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-cssselect==1.1.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
-dateparser==1.0.0; python_version >= "3.5"
-extruct==0.12.0
-h2==3.2.0; python_full_version >= "3.5.4" and python_version >= "3.6"
-hpack==3.0.0; python_version >= "3.6"
-html-text==0.5.2
-html5lib==1.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
-hyperframe==5.2.0; python_version >= "3.6"
-hyperlink==21.0.0; python_full_version >= "3.5.4" and python_version >= "3.6"
-idna==3.1; python_full_version >= "3.5.4" and python_version >= "3.6"
-incremental==21.3.0; python_full_version >= "3.5.4" and python_version >= "3.6"
-isodate==0.6.0
-itemadapter==0.2.0; python_version >= "3.6"
-itemloaders==1.0.4; python_version >= "3.6"
-jmespath==0.10.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6"
-js2py==0.71
-spidermon==1.15.0
-jstyleson==0.0.2
-lxml==4.6.3; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-mf2py==1.1.1
-more-itertools==8.7.0; python_version >= "3.5"
-parsel==1.6.0; python_version >= "3.6"
-price-parser==0.3.4
-priority==1.3.0; python_full_version >= "3.5.4" and python_version >= "3.6"
-protego==0.1.16; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-pyasn1-modules==0.2.8; python_version >= "3.6"
-pyasn1==0.4.8; python_version >= "3.6"
-pycparser==2.20; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
-pydantic==1.8.1; python_full_version >= "3.6.1"
-dnspython==2.1.0
-pydispatcher==2.0.5; platform_python_implementation == "CPython" and python_version >= "3.6"
-pyjsparser==2.7.1
-pyopenssl==20.0.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-pyparsing==2.4.7; python_version >= "2.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0"
-pypydispatcher==2.1.2; platform_python_implementation == "PyPy" and python_version >= "3.6"
-pyrdfa3==3.5.3
-python-dateutil==2.8.1; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.5"
-pytz==2021.1; python_version >= "3.5"
-queuelib==1.6.1; python_version >= "3.6"
-rdflib-jsonld==0.5.0
-rdflib==5.0.0
-regex==2021.4.4; python_version >= "3.5"
-scrapy-mongodb==0.12.0
-pymongo==3.11.4
-requests==2.15.1
-schematics==2.1.0
-python-decouple==3.4; python_version >= "3.6"
-scrapy==2.5.0; python_version >= "3.6"
-service-identity==21.1.0; python_version >= "3.6"
-six==1.16.0; python_full_version >= "3.5.4" and python_version >= "3.6" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0") and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0")
-soupsieve==2.2.1; python_version >= "3.6"
-twisted-iocpsupport==1.0.1; python_full_version >= "3.5.4" and python_version >= "3.6" and platform_system == "Windows"
-twisted==21.2.0; python_full_version >= "3.5.4" and python_version >= "3.6"
-typing-extensions==3.10.0.0; python_full_version >= "3.6.1"
-tzlocal==2.1; python_version >= "3.5"
-ujson==4.0.2; python_version >= "3.6"
-w3lib==1.22.0; python_version >= "3.6"
-webencodings==0.5.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
-zope.interface==5.4.0; python_full_version >= "3.5.4" and python_version >= "3.6"
+attrs==22.1.0 ; python_version >= "3.7" and python_version < "4.0"
+automat==22.10.0 ; python_version >= "3.7" and python_version < "4.0"
+backports-zoneinfo==0.2.1 ; python_version >= "3.7" and python_version < "3.9"
+beautifulsoup4==4.11.1 ; python_version >= "3.7" and python_version < "4.0"
+certifi==2022.9.24 ; python_version >= "3.7" and python_version < "4"
+cffi==1.15.1 ; python_version >= "3.7" and python_version < "4.0"
+charset-normalizer==2.1.1 ; python_version >= "3.7" and python_version < "4"
+constantly==15.1.0 ; python_version >= "3.7" and python_version < "4.0"
+cryptography==38.0.4 ; python_version >= "3.7" and python_version < "4.0"
+cssselect==1.2.0 ; python_version >= "3.7" and python_version < "4.0"
+dateparser==1.1.4 ; python_version >= "3.7" and python_version < "4.0"
+extruct==0.12.0 ; python_version >= "3.7" and python_version < "4.0"
+filelock==3.8.1 ; python_version >= "3.7" and python_version < "4.0"
+html-text==0.5.2 ; python_version >= "3.7" and python_version < "4.0"
+html5lib==1.1 ; python_version >= "3.7" and python_version < "4.0"
+hyperlink==21.0.0 ; python_version >= "3.7" and python_version < "4.0"
+idna==3.4 ; python_version >= "3.7" and python_version < "4.0"
+importlib-metadata==5.1.0 ; python_version >= "3.7" and python_version < "3.8.0"
+incremental==22.10.0 ; python_version >= "3.7" and python_version < "4.0"
+isodate==0.6.1 ; python_version >= "3.7" and python_version < "4.0"
+itemadapter==0.7.0 ; python_version >= "3.7" and python_version < "4.0"
+itemloaders==1.0.6 ; python_version >= "3.7" and python_version < "4.0"
+jmespath==1.0.1 ; python_version >= "3.7" and python_version < "4.0"
+js2py==0.71 ; python_version >= "3.7" and python_version < "4.0"
+jsonpointer==2.3 ; python_version >= "3.7" and python_version < "4.0"
+jsonschema[format]==3.2.0 ; python_version >= "3.7" and python_version < "4.0"
+jstyleson==0.0.2 ; python_version >= "3.7" and python_version < "4.0"
+lxml==4.9.1 ; python_version >= "3.7" and python_version < "4.0"
+mf2py==1.1.2 ; python_version >= "3.7" and python_version < "4.0"
+more-itertools==8.14.0 ; python_version >= "3.7" and python_version < "4.0"
+packaging==21.3 ; python_version >= "3.7" and python_version < "4.0"
+parsel==1.7.0 ; python_version >= "3.7" and python_version < "4.0"
+price-parser==0.3.4 ; python_version >= "3.7" and python_version < "4.0"
+protego==0.2.1 ; python_version >= "3.7" and python_version < "4.0"
+pyasn1-modules==0.2.8 ; python_version >= "3.7" and python_version < "4.0"
+pyasn1==0.4.8 ; python_version >= "3.7" and python_version < "4.0"
+pycparser==2.21 ; python_version >= "3.7" and python_version < "4.0"
+pydantic==1.10.2 ; python_version >= "3.7" and python_version < "4.0"
+pydispatcher==2.0.6 ; python_version >= "3.7" and python_version < "4.0" and platform_python_implementation == "CPython"
+pyjsparser==2.7.1 ; python_version >= "3.7" and python_version < "4.0"
+pyopenssl==22.1.0 ; python_version >= "3.7" and python_version < "4.0"
+pyparsing==3.0.9 ; python_version >= "3.7" and python_version < "4.0"
+pypydispatcher==2.1.2 ; python_version >= "3.7" and python_version < "4.0" and platform_python_implementation == "PyPy"
+pyrdfa3==3.5.3 ; python_version >= "3.7" and python_version < "4.0"
+pyrsistent==0.19.2 ; python_version >= "3.7" and python_version < "4.0"
+python-dateutil==2.8.2 ; python_version >= "3.7" and python_version < "4.0"
+python-slugify==7.0.0 ; python_version >= "3.7" and python_version < "4.0"
+pytz-deprecation-shim==0.1.0.post0 ; python_version >= "3.7" and python_version < "4.0"
+pytz==2022.6 ; python_version >= "3.7" and python_version < "4.0"
+queuelib==1.6.2 ; python_version >= "3.7" and python_version < "4.0"
+rdflib-jsonld==0.6.2 ; python_version >= "3.7" and python_version < "4.0"
+rdflib==6.2.0 ; python_version >= "3.7" and python_version < "4.0"
+regex==2022.10.31 ; python_version >= "3.7" and python_version < "4.0"
+requests-file==1.5.1 ; python_version >= "3.7" and python_version < "4.0"
+requests==2.28.1 ; python_version >= "3.7" and python_version < "4"
+rfc3987==1.3.8 ; python_version >= "3.7" and python_version < "4.0"
+scrapy==2.7.1 ; python_version >= "3.7" and python_version < "4.0"
+service-identity==21.1.0 ; python_version >= "3.7" and python_version < "4.0"
+setuptools==65.6.3 ; python_version >= "3.7" and python_version < "4.0"
+six==1.16.0 ; python_version >= "3.7" and python_version < "4.0"
+soupsieve==2.3.2.post1 ; python_version >= "3.7" and python_version < "4.0"
+spidermon==1.17.0 ; python_version >= "3.7" and python_version < "4.0"
+strict-rfc3339==0.7 ; python_version >= "3.7" and python_version < "4.0"
+text-unidecode==1.3 ; python_version >= "3.7" and python_version < "4.0"
+tldextract==3.4.0 ; python_version >= "3.7" and python_version < "4.0"
+twisted-iocpsupport==1.0.2 ; python_version >= "3.7" and python_version < "4.0" and platform_system == "Windows"
+twisted==22.4.0 ; python_version >= "3.7" and python_version < "4.0"
+typing-extensions==4.4.0 ; python_version >= "3.7" and python_version < "4.0"
+tzdata==2022.7 ; python_version >= "3.7" and python_version < "4.0"
+tzlocal==4.2 ; python_version >= "3.7" and python_version < "4.0"
+ujson==4.3.0 ; python_version >= "3.7" and python_version < "4.0"
+urllib3==1.26.13 ; python_version >= "3.7" and python_version < "4"
+w3lib==2.1.0 ; python_version >= "3.7" and python_version < "4.0"
+webcolors==1.12 ; python_version >= "3.7" and python_version < "4.0"
+webencodings==0.5.1 ; python_version >= "3.7" and python_version < "4.0"
+zipp==3.11.0 ; python_version >= "3.7" and python_version < "3.8.0"
+zope-interface==5.5.2 ; python_version >= "3.7" and python_version < "4.0"
