--- a/requirements.txt
+++ b/requirements.txt
@@ -20,12 +20,14 @@ incremental==22.10.0 ; python_version >= "3.7" and python_version < "4.0"
 isodate==0.6.1 ; python_version >= "3.7" and python_version < "4.0"
 itemadapter==0.7.0 ; python_version >= "3.7" and python_version < "4.0"
 itemloaders==1.0.6 ; python_version >= "3.7" and python_version < "4.0"
+jinja2==3.1.2 ; python_version >= "3.7" and python_version < "4.0"
 jmespath==1.0.1 ; python_version >= "3.7" and python_version < "4.0"
 js2py==0.71 ; python_version >= "3.7" and python_version < "4.0"
 jsonpointer==2.3 ; python_version >= "3.7" and python_version < "4.0"
 jsonschema[format]==3.2.0 ; python_version >= "3.7" and python_version < "4.0"
 jstyleson==0.0.2 ; python_version >= "3.7" and python_version < "4.0"
 lxml==4.9.1 ; python_version >= "3.7" and python_version < "4.0"
+markupsafe==2.1.1 ; python_version >= "3.7" and python_version < "4.0"
 mf2py==1.1.2 ; python_version >= "3.7" and python_version < "4.0"
 more-itertools==8.14.0 ; python_version >= "3.7" and python_version < "4.0"
 packaging==21.3 ; python_version >= "3.7" and python_version < "4.0"
@@ -38,12 +40,14 @@ pycparser==2.21 ; python_version >= "3.7" and python_version < "4.0"
 pydantic==1.10.2 ; python_version >= "3.7" and python_version < "4.0"
 pydispatcher==2.0.6 ; python_version >= "3.7" and python_version < "4.0" and platform_python_implementation == "CPython"
 pyjsparser==2.7.1 ; python_version >= "3.7" and python_version < "4.0"
+pymongo==3.11.4 ; python_version >= "3.7" and python_version < "4.0"
 pyopenssl==22.1.0 ; python_version >= "3.7" and python_version < "4.0"
 pyparsing==3.0.9 ; python_version >= "3.7" and python_version < "4.0"
 pypydispatcher==2.1.2 ; python_version >= "3.7" and python_version < "4.0" and platform_python_implementation == "PyPy"
 pyrdfa3==3.5.3 ; python_version >= "3.7" and python_version < "4.0"
 pyrsistent==0.19.2 ; python_version >= "3.7" and python_version < "4.0"
 python-dateutil==2.8.2 ; python_version >= "3.7" and python_version < "4.0"
+python-decouple==3.6 ; python_version >= "3.7" and python_version < "4.0"
 python-slugify==7.0.0 ; python_version >= "3.7" and python_version < "4.0"
 pytz-deprecation-shim==0.1.0.post0 ; python_version >= "3.7" and python_version < "4.0"
 pytz==2022.6 ; python_version >= "3.7" and python_version < "4.0"
@@ -54,6 +58,7 @@ regex==2022.10.31 ; python_version >= "3.7" and python_version < "4.0"
 requests-file==1.5.1 ; python_version >= "3.7" and python_version < "4.0"
 requests==2.28.1 ; python_version >= "3.7" and python_version < "4"
 rfc3987==1.3.8 ; python_version >= "3.7" and python_version < "4.0"
+scrapy-mongodb==0.12.0 ; python_version >= "3.7" and python_version < "4.0"
 scrapy==2.7.1 ; python_version >= "3.7" and python_version < "4.0"
 service-identity==21.1.0 ; python_version >= "3.7" and python_version < "4.0"
 setuptools==65.6.3 ; python_version >= "3.7" and python_version < "4.0"
